@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2009 Stephen Colebourne
+ *  Copyright 2001-2011 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -349,8 +349,13 @@ public class DateTimeParserBucket {
 
         long millis = iMillis;
         try {
-            for (int i=0; i<count; i++) {
+            for (int i = 0; i < count; i++) {
                 millis = savedFields[i].set(millis, resetFields);
+            }
+            if (resetFields) {
+                for (int i = 0; i < count; i++) {
+                    millis = savedFields[i].set(millis, i == (count - 1));
+                }
             }
         } catch (IllegalFieldValueException e) {
             if (text != null) {
